# Smart-Systems-2025

./: CMakeLists.txt  README.md  README.txt  SmartSystems25Test_en_NO.ts  chatwindow.cpp  chatwindow.h  dashboard.cpp  dashboard.h  dashboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
